fix: limit permission admin & user
